docker/minikube/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database-pod
  template:
    metadata:
      labels:
        app: database-pod
    spec:
      # initContainers:
      # - name: init-db
      #   # image: alpine
      #   # command: ['sh', '-c', 'apk add shadow; getent group docker || groupadd docker; chown :docker /var/lib/mysql']
      #   image: busybox
      #   # command: ['sh', '-c', 'chown :999 /var/lib/mysql; chmod -R 600 /var/lib/mysql']
      #   command: ['sh', '-c', 'chown :999 /var/lib/mysql']
      #   volumeMounts:
      #   - name: db-storage
      #     mountPath: /var/lib/mysql
      containers:
      - name: mysql-db
        image: local-registry:5000/docker.io/mysql
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: db-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
