docker/minikube/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        fsGroup: 0
      containers:
      - name: grafana
        image: local-registry:5000/grafana/grafana
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
        volumeMounts:
        - name: app-volume
          mountPath: /etc/grafana
        # command: ['sh', '-c', 'nginx -g "daemon off;"']
        securityContext:
          runAsUser: 0
          runAsGroup: 0          
      imagePullSecrets:
      - name: local-registry-secret
      volumes:
      - name: app-volume
        persistentVolumeClaim:
          claimName: grafana-pvc
