docker/minikube/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: local-registry:5000/jenkins/jenkins
        imagePullPolicy: IfNotPresent
        # env:
        # - name: JENKINS_URL
        #   value: http://localhost:8080/jenkins/
        resources:
          limits:
            memory: "2Gi"
            cpu: "1000m"
          requests:
            memory: "500Mi"
            cpu: "500m"
        securityContext:
            runAsGroup: 0
        ports:
          - name: httpport
            containerPort: 8080
          - name: jnlpport
            containerPort: 50000
        # livenessProbe:
        #   httpGet:
        #     path: "/login"
        #     port: 8080
        #   initialDelaySeconds: 90
        #   periodSeconds: 10
        #   timeoutSeconds: 5
        #   failureThreshold: 5
        # readinessProbe:
        #   httpGet:
        #     path: "/login"
        #     port: 8080
        #   initialDelaySeconds: 60
        #   periodSeconds: 10
        #   timeoutSeconds: 5
        #   failureThreshold: 3
        volumeMounts:
          - name: jenkins-mnt
            mountPath: /var/jenkins_home
          - name: docker-sock
            mountPath: /var/run/docker.sock
      volumes:
        - name: jenkins-mnt
          persistentVolumeClaim:
            claimName: jenkins-pvc
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
            type: Socket
