docker/minikube/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      securityContext:
        fsGroup: 0
      containers:
      - name: prometheus
        image: local-registry:5000/prom/prometheus
        imagePullPolicy: IfNotPresent
        # imagePullPolicy: Always
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: app-volume
          mountPath: /etc/prometheus
        # command: ['sh', '-c', 'nginx -g "daemon off;"']
        securityContext:
          runAsUser: 0
          runAsGroup: 0          
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: app-volume
        persistentVolumeClaim:
          claimName: prometheus-pvc
