docker/minikube/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  type: LoadBalancer
  selector:
    app: jenkins
  ports:
    - port: 8080
      targetPort: http-port
      name: http
    - port: 50000
      targetPort: jnlp-port
      # nodePort: 31472
      name: jnlp
