docker/minikube/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
spec:
  hosts:
  - "*"
  gateways:
  - helloworld-gateway
  http:
  # - match:
  #   - uri:
  #       prefix: /mydb
  #   route:
  #   - destination:
  #       host: database
  #       port:
  #         number: 3306
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /static
    - uri:
        prefix: /assets
    route:
    - destination:
        host: frontend
        port:
          number: 3000
  - match:
    - uri:
        prefix: /backend/
    rewrite:
        uri: /demo/
    route:
    - destination:
        host: backend
        port:
          number: 8080
